k3s/native/ingress/immich-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-paths
  namespace: immich
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "40g"
spec:
  ingressClassName: nginx
  rules:
    - host: immich.m1c1b.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
    - host: photos-zxc.ru.tuna.am
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  number: 2283
