k3s/native/ingress/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-paths
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: minio home
    nginx.ingress.kubernetes.io/proxy-body-size: "20G"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 's3-api.m1c1b.home'
        - 's3-console.m1c1b.home'
      secretName: minio-tls

  rules:
    - host: 's3-console.m1c1b.home'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  name: console
    - host: 's3-api.m1c1b.home'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  name: http
---
