k3s/native/ingress/navidrome.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome-paths
  namespace: navidrome
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
spec:
  ingressClassName: nginx
  rules:
    - host: music.m1c1b.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome-service
                port:
                  number: 80
    - host: music-zxc.ru.tuna.am
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navidrome-service
                port:
                  number: 80
---
