k3s/native/ingress/open-webui.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-paths
  namespace: open-webui
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
spec:
  ingressClassName: nginx
  rules:
    - host: ai-zxc.ru.tuna.am
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
---
